--- a/europa.html
+++ b/europa.html
@@ -98,7 +98,7 @@
                 <p>Il pretzel è un pane intrecciato a forma di nodo, tipico della tradizione bavarese, ma diffuso in tutta la Germania.<br><br>
                 La sua caratteristica crosticina scura e lucida deriva dalla spennellatura con una soluzione alcalina (come l’acqua e bicarbonato) prima della cottura.<br><br>
                 Morbido all’interno e croccante all’esterno, il pretzel si gusta spesso accompagnato da senape o burro, diventando un simbolo dello street food tedesco, particolarmente apprezzato durante le feste della birra e nei mercatini di Natale. </p>
-                <img class="imgcibi" src="img/Pretzel .jpeg" alt="">
+                <img class="imgcibi" src="img/pretzel.jpg" alt="">
             </div>
          </div>
     </section> 
