--- a/continenti.html
+++ b/continenti.html
@@ -46,7 +46,7 @@ Ovunque, è un modo semplice e vivo per raccontare il cibo e la cultura di un po
 
         <section class="color">
                 <div class="vuotolista4">
-                      <a href="europa.html">Europa</a>
+                      <h6>Europa</h6>
                       <p class="lista3">Dalle olive ascolane agli arancini siciliani, passando per churros, bratwurst e crêpes: lo street food europeo è un mosaico di gusti e tradizioni locali. Ogni boccone è una piccola storia da gustare tra le piazze e i mercatini del continente</p>
                       <a href="europa.html">Per saperene di più...</a>
                       <img src="img/europamarket.jpg" alt="">
@@ -56,8 +56,7 @@ Ovunque, è un modo semplice e vivo per raccontare il cibo e la cultura di un po
 
     <section class="color">
         <div class="vuotolista4">
-            
-                <a href="africa.html">Africa</a>
+                <h6>Africa</h6>
                 <p class="lista3">Spezie, brace e convivialità: il cibo di strada africano è una celebrazione di sapori intensi. Suya nigeriano, bunny chow sudafricano o mutura del Kenya: ogni piatto riflette la ricchezza culturale del continente.</p>
                 <a href="africa.html">Per saperene di più...</a>
             
@@ -67,7 +66,7 @@ Ovunque, è un modo semplice e vivo per raccontare il cibo e la cultura di un po
 
         <section class="color">
                 <div class="vuotolista4">
-                      <a href="asia.html">Asia</a>
+                      <h6>Asia</h6>
                       <p class="lista3">Profumi intensi, sapori decisi e colori accesi: dai baozi cinesi al pad thai thailandese, fino ai pani puri indiani e ai takoyaki giapponesi, il cibo di strada asiatico è un'esperienza multisensoriale che racconta secoli di cultura.</p>
                       <a href="asia.html">Per saperene di più...</a>
                       <img src="img/asianmarket.jpeg" alt="">
@@ -76,7 +75,7 @@ Ovunque, è un modo semplice e vivo per raccontare il cibo e la cultura di un po
 
      <section class="color">
      <div class="vuotolista4">
-            <a href="americhe.html">Americhe</a>
+            <h6>Americhe</h6>
             <p class="lista3">Dalle empanadas argentine ai tacos messicani, dagli hot dog statunitensi agli acarajé brasiliani: lo street food delle Americhe fonde ingredienti locali e influenze globali in piatti vivaci, conviviali e irresistibili.</p>
             <a href="americhe.html">Per saperene di più...</a>
             <img src="img/americamarket.png" alt="">
@@ -86,7 +85,7 @@ Ovunque, è un modo semplice e vivo per raccontare il cibo e la cultura di un po
 
         <section class="color">
                 <div class="vuotolista4">
-                      <a href="oceania.html">Oceania</a>
+                      <h6>Oceania</h6>
                       <p class="lista3">Tradizioni antiche e spirito creativo si incontrano nel cibo di strada dell’Oceania. Dai meat pie australiani al hāngī maori, fino ai burger di pesce barramundi: ogni morso parla di natura, cultura e innovazione.</p>
                       <a href="oceania.html">Per saperene di più...</a>
                       <img src="img/oceaniamarket.png" alt="">
