--- a/continenti.html
+++ b/continenti.html
@@ -44,7 +44,7 @@ Ovunque, è un modo semplice e vivo per raccontare il cibo e la cultura di un po
 
 
 
-        <section class="color">
+        <section class="color2">
                 <div class="vuotolista4">
                       <h6>Europa</h6>
                       <p class="lista3">Dalle olive ascolane agli arancini siciliani, passando per churros, bratwurst e crêpes: lo street food europeo è un mosaico di gusti e tradizioni locali. Ogni boccone è una piccola storia da gustare tra le piazze e i mercatini del continente</p>
@@ -54,17 +54,19 @@ Ovunque, è un modo semplice e vivo per raccontare il cibo e la cultura di un po
         </section>
 
 
-    <section class="color">
-        <div class="vuotolista4">
+    <section class="color2">
+        <div class="listadestra">
+        <div class="vuotolista5">
                 <h6>Africa</h6>
                 <p class="lista3">Spezie, brace e convivialità: il cibo di strada africano è una celebrazione di sapori intensi. Suya nigeriano, bunny chow sudafricano o mutura del Kenya: ogni piatto riflette la ricchezza culturale del continente.</p>
                 <a href="africa.html">Per saperene di più...</a>
-            
-            <img src="img/africamarket.jpg" alt="">
+                <img src="img/africamarket.jpg" alt="">
         </div>
+        </div>
+
      </section>
 
-        <section class="color">
+        <section class="color2">
                 <div class="vuotolista4">
                       <h6>Asia</h6>
                       <p class="lista3">Profumi intensi, sapori decisi e colori accesi: dai baozi cinesi al pad thai thailandese, fino ai pani puri indiani e ai takoyaki giapponesi, il cibo di strada asiatico è un'esperienza multisensoriale che racconta secoli di cultura.</p>
@@ -73,8 +75,8 @@ Ovunque, è un modo semplice e vivo per raccontare il cibo e la cultura di un po
                 </div>
         </section>
 
-     <section class="color">
-     <div class="vuotolista4">
+     <section class="color2">
+     <div class="vuotolista5">
             <h6>Americhe</h6>
             <p class="lista3">Dalle empanadas argentine ai tacos messicani, dagli hot dog statunitensi agli acarajé brasiliani: lo street food delle Americhe fonde ingredienti locali e influenze globali in piatti vivaci, conviviali e irresistibili.</p>
             <a href="americhe.html">Per saperene di più...</a>
@@ -83,7 +85,7 @@ Ovunque, è un modo semplice e vivo per raccontare il cibo e la cultura di un po
      </section>
 
 
-        <section class="color">
+        <section class="color2">
                 <div class="vuotolista4">
                       <h6>Oceania</h6>
                       <p class="lista3">Tradizioni antiche e spirito creativo si incontrano nel cibo di strada dell’Oceania. Dai meat pie australiani al hāngī maori, fino ai burger di pesce barramundi: ogni morso parla di natura, cultura e innovazione.</p>
