--- a/continenti.html
+++ b/continenti.html
@@ -37,9 +37,8 @@ Ovunque, è un modo semplice e vivo per raccontare il cibo e la cultura di un po
             <div class="space"></div>
         </section>
 
-        <section class="intro">
-            <div class="space2"></div>
-            <img class="image2" src="img/streetfoodintro.jpg" alt="">
+        <section class="intro3">
+            <img class="image6" src="img/streetfoodintro.jpg" alt="">
      </section>
 
 
