--- a/curiosità.html
+++ b/curiosità.html
@@ -36,10 +36,9 @@
             <div class="space"></div>
         </section>
 
-        <section class="intro">
-            <div class="space2"></div>
-            <img class="image" src="img/curiositaintro.png" alt="">
-     </section>
+        <section class="intro3">
+            <img class="image6" src="img/curiositaintro.png" alt="">
+       </section>
 
      <section class="sfondobg">
         <div class="sfondo">
