--- a/streetfood.html
+++ b/streetfood.html
@@ -35,9 +35,8 @@
             <div class="space"></div>
         </section>
 
-        <section class="intro">
-            <div class="space2"></div>
-            <img class="image" src="img/streetfoodintro2.jpg" alt="">
+        <section class="intro3">
+            <img class="image6" src="img/streetfoodintro2.jpg" alt="">
  </section>
    <section class="sfondobg">
     <div class="sfondo">
