--- a/streetfoodfusion.html
+++ b/streetfoodfusion.html
@@ -36,9 +36,8 @@
             <div class="space"></div>
         </section>
 
-        <section class="intro">
-            <div class="space2"></div>
-            <img class="image5" src="img/streetfoodfusionintro.jpg" alt="">
+        <section class="intro3">
+            <img class="image6" src="img/streetfoodfusionintro.jpg" alt="">
      </section>
 
      <div class="sfondobg2">
