--- a/continenti.html
+++ b/continenti.html
@@ -67,7 +67,7 @@ Ovunque, è un modo semplice e vivo per raccontare il cibo e la cultura di un po
                       <h6>Asia</h6>
                       <p class="lista3">Profumi intensi, sapori decisi e colori accesi: dai baozi cinesi al pad thai thailandese, fino ai pani puri indiani e ai takoyaki giapponesi, il cibo di strada asiatico è un'esperienza multisensoriale che racconta secoli di cultura.</p>
                       <a href="asia.html">Per saperene di più...</a>
-                      <img src="img/asianmarket.jpeg" alt="">
+                      <img src="img/asianmarket2.jpg" alt="">
                 </div>
         </section>
 
