--- a/africa.html
+++ b/africa.html
@@ -13,7 +13,7 @@
     <header>
         <div class="contenutoheader">
             <div class="nomesito">
-                <h1>STREETBITES</h1>
+                <a href="index.html">STREETBITES</a>
             </div>
             <nav>
                 <ul>
