--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="home">
         <div class="contenutoheader">
             <div class="nomesito">
-                <h1>STREETBITES</h1>
+                <a href="index.html"  class="attivo">STREETBITES</a>
             </div>
             <nav>
                 <ul>
