--- a/streetfood.html
+++ b/streetfood.html
@@ -13,7 +13,7 @@
     <header>
         <div class="contenutoheader">
             <div class="nomesito">
-                <h1>STREETBITES</h1>
+                <a href="index.html">STREETBITES</a>
             </div>
             <nav>
                 <ul>
@@ -32,7 +32,6 @@
                 <h3>STREET FOOD</h3>
                 <p>Lo street food, o cibo di strada, è molto più di un pasto veloce consumato tra un impegno e l'altro: è un'esperienza culturale autentica, un modo diretto per assaporare l'anima di un luogo.</p> 
             </div>
-            <div class="space"></div>
         </section>
 
         <section class="intro3">
