--- a/streetfoodfusion.html
+++ b/streetfoodfusion.html
@@ -33,62 +33,61 @@
                 <h3>STREET FOOD FUSION</h3>
                 <p>Lo street food fusion nasce dall’incontro di tradizioni culinarie diverse, dando vita a piatti nuovi e creativi. Negli ultimi anni, questa tendenza ha conquistato le strade di molte città globali, diventando un fenomeno molto amato soprattutto tra i giovani e i food lovers. </p> 
             </div>
-            <div class="space"></div>
         </section>
 
         <section class="intro3">
             <img class="image6" src="img/streetfoodfusionintro.jpg" alt="">
      </section>
-
-     <div class="sfondobg2">
-        <section class="color">
-                <div class="vuotolista2">
-                    <div class="vuotolista3">
-                      <h6>Korean Taco</h6>
-                      <p>Un taco messicano ripieno di ingredienti coreani come il bulgogi o kimchi. </p>
-                    </div>
-                    <img src="img/koreantaco.png" alt="">
-                </div>
-        </section>
-     </div>
-
-    <section class="color">
-        <div class="vuotolista2">
-            <div class="vuotolista3">
-                <h6>Ramen Burger</h6>
-                <p class="lista3">Hamburger in cui i panini sono fatti di noodles fritti invece del pane.</p>
-            </div>
-            <img class="" src="img/ramenburger.png" alt="">
-        </div>
-     </section>
-
-
-
-      <div class="sfondobg2">
-        <section class="color">
-                <div class="vuotolista2">
-                    <div class="vuotolista3">
-                      <h6>JapaDog</h6>
-                      <p>Hot dog con condimenti tipici giapponesi come wasabi, alghe e maionese speziata.</p>
-                    </div>
-                    <img src="img/japadog.jpg" alt="">
-                </div>
-        </section>
-     </div>
-
-     <section class="color">
-     <div class="vuotolista2">
-        <div class="vuotolista3">
-            <h6>Sushi Burrito</h6>
-            <p class="lista3">Un grande rotolo di sushi preparato come un burrito messicano, facile da mangiare in strada.</p>
-        </div>
-            <img src="img/sushiburrito.jpg" alt="">
-    </div>
-     </section>
-
-
-    
 </main>
+
+<section class="main2">
+
+        <div class="giallo1">
+        <section class="list1">
+            <div class="list2">
+                <div class="list3">
+                   <h6>Korean Taco</h6>
+                   <p>Un taco messicano ripieno di ingredienti coreani come il bulgogi o kimchi. </p>
+                </div>
+                <img src="img/koreantaco.png" alt="">
+            </div>
+        </section>
+    </div>
+    
+        <section class="list1">
+            <div class="list2">
+                <div class="list3">
+                   <h6>Ramen Burge</h6>
+                   <p>Hamburger in cui i panini sono fatti di noodles fritti invece del pane.</p>
+                </div>
+                <img src="img/ramenburger2.jpg" alt="">
+            </div>
+        </section>
+
+    <div class="giallo1">
+        <section class="list1">
+            <div class="list2">
+                <div class="list3">
+                    <h6>JapaDog</h6>
+                    <p>Hot dog con condimenti tipici giapponesi come wasabi, alghe e maionese speziata.</p>
+                </div>
+                <img src="img/japadog.jpg" alt="">
+            </div>
+        </section>
+    </div>
+
+        <section class="list1">
+            <div class="list2">
+                <div class="list3">
+                    <h6>Sushi Burrito</h6>
+                    <p>Un grande rotolo di sushi preparato come un burrito messicano, facile da mangiare in strada.</p>
+                </div>
+                <img src="img/sushiburrito.jpg" alt="">
+            </div>
+        </section>
+
+
+</section>
 
     <footer>
         <div class="contenutofooter">
