--- a/curiosità.html
+++ b/curiosità.html
@@ -38,12 +38,14 @@
         <section class="intro3">
             <img class="image6" src="img/curiositaintro.png" alt="">
        </section>
-
-     <section class="sfondobg">
-        <div class="sfondo">
-            <h5 class="h5normale">Consigli sullo Street Food</h5>
-            <div class="testocibi">
-                <p class="cibi">Prova sempre i cibi più tipici e locali: 
+</main>
+<section class="main2">
+<div class="giallo1">
+     <section class="list1">
+        <div class="list4">
+            <div class="list5">
+            <h5>Consigli sullo Street Food</h5>
+            <p>Prova sempre i cibi più tipici e locali: 
                 lo street food è un modo fantastico per scoprire la cultura di un luogo, assaggiando piatti autentici che spesso non si trovano nei ristoranti tradizionali.<br></br>
                 Controlla la pulizia: 
                 scegli sempre bancarelle con un buon livello di igiene, soprattutto quando si tratta di cibo crudo o poco cotto.<br></br> 
@@ -53,11 +55,14 @@
                 le bancarelle frequentate dalla gente del posto sono quasi sempre garanzia di qualità e freschezza. <br></br>
                 Sperimenta e chiedi: 
                 molti venditori sono felici di raccontare la storia del loro cibo e dare consigli su come gustarlo al meglio. </p>
-                <img class="imgcibi" src="img/curiositasection2.png" alt="">
-            </div>     
+            </div> 
+                <img class="list4img" src="img/curiositasection2.png" alt="">
         </div>
      </section>
-
+</div>
+</section>
+<main>
+    
       <div class="testo">
             <h5 class="h5normale">Piatti di street food più strani nel mondo</h5>
             <p>Lo street food non è solo gusto e tradizione: a volte è pura sorpresa! In ogni angolo del pianeta esistono piatti che sfidano i palati più curiosi e aperti, spesso legati a usanze culturali antichissime o a risorse locali insolite. Quello che per qualcuno può sembrare “bizzarro”, altrove è un comfort food quotidiano. </p>
